@@ -4320,8 +4320,12 @@ formatfloat(char *buf, size_t buflen, int flags,
 	}
 	if (prec < 0)
 		prec = 6;
-	if (type == 'f' && fabs(x)/1e25 >= 1e25)
-		type = 'g';
+	if ((type == 'f' || type == 'F') && (fabs(x) / 1e25) >= 1e25) {
+		if (type == 'f')
+			type = 'g';
+		else
+			type = 'G';
+	}
 	/* Worst case length calc to ensure no buffer overrun:
 
 	   'g' formats:
@@ -4340,7 +4344,8 @@ formatfloat(char *buf, size_t buflen, int flags,
 	*/
 	if (((type == 'g' || type == 'G') &&
               buflen <= (size_t)10 + (size_t)prec) ||
-	    (type == 'f' && buflen <= (size_t)53 + (size_t)prec)) {
+	    ((type == 'f' || type == 'F') &&
+	      buflen <= (size_t)53 + (size_t)prec)) {
 		PyErr_SetString(PyExc_OverflowError,
 			"formatted float is too long (precision too large?)");
 		return -1;
@@ -4910,8 +4915,6 @@ PyString_Format(PyObject *format, PyObject *args)
 			case 'F':
 			case 'g':
 			case 'G':
-				if (c == 'F')
-					c = 'f';
 				pbuf = formatbuf;
 				len = formatfloat(pbuf, sizeof(formatbuf),
 						  flags, prec, c, v);
